--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -65,6 +65,9 @@
 <script src="{% static 'website/js/countdown.min.js' %}"></script>
 <script src="{% static 'website/js/slick.min.js' %}"></script>
 <script src="{% static 'website/js/custom.js' %}"></script>
+<script type="text/javascript" src="{% static 'website/js/toastify.js' %}"></script>
+{% include 'messages.html' %}
+
 
 </body>
 
