--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -206,9 +206,9 @@
             <div class="main_search_collapse collapse" id="main_search_collapse">
                <div class="main_search_form position-relative card">
                   <div class="container">
-                     <form action="#">
+                     <form action="{% url 'website:shop' %}">
                         <div class="form_item position-relative">
-                           <input type="search" class="form-control rounded-pill py-3" name="search"
+                           <input type="search" class="form-control rounded-pill py-3" name="title"
                               placeholder="Search Your Product...">
                            <button type="submit" class="submit_btn"><i class="fas fa-search"></i></button>
                         </div>
