--- a/src/website/templates/website/product_list.html
+++ b/src/website/templates/website/product_list.html
@@ -257,25 +257,16 @@
                                                                             </li>
                                                                             <li><a class="tooltips"
                                                                                    title="Add To Cart"
-                                                                                   href="{% url 'website:add-to-cart' object.pk %}"><i
-                                                                                    class="fas fa-shopping-bag"></i></a>
+                                                                                   href="{% url 'website:wishlist-add' object.pk  %}"><i
+                                                                                    class="far fa-heart"></i></a>
                                                                             </li>
                                                                         </ul>
                                                                     </div>
                                                                     <div class="rating_wrap d-flex">
                                                                         <ul class="rating_star ul_li">
-                                                                            <li class="active"><i
-                                                                                    class="fas fa-star"></i></li>
-                                                                            <li class="active"><i
-                                                                                    class="fas fa-star"></i></li>
-                                                                            <li class="active"><i
-                                                                                    class="fas fa-star"></i></li>
-                                                                            <li class="active"><i
-                                                                                    class="fas fa-star"></i></li>
-                                                                            <li><i class="far fa-star"></i></li>
+                                                                           {{ object.average_review|get_html_icons }}
                                                                         </ul>
-                                                                        <span class="shop_review_text">( 4.0
-                                                            )</span>
+                                                                        <span class="shop_review_text">( {{ object.average_review }})</span>
                                                                     </div>
                                                                     <div class="product_content">
                                                                         <h3 class="product_title">
